# FastPlayer

./: .gitignore  README.md  build.gradle
app/: build.gradle
app/src/androidTest/java/com/sivin/sivinplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  FastPlayer.c  FastPlayer.h  FastPlayer2.c  H264DecodeDefine.h  sivin_player.c  sivin_player.h
app/src/main/cpp/include/libavutil/: ffversion.h
app/src/main/java/com/sivin/fastplayer/: FastPlayer.java  FastPlayer2.java  MainActivity.java
app/src/main/java/com/sivin/fastplayer/opengles/: GLFrameRenderer.java  GLProgram.java
app/src/main/java/com/sivin/sivinplayer/: MainActivity.java  SPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/sivin/sivinplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
